# scheduler

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  fly.toml  package.json  pnpm-lock.yaml  tailwind.config.js
migrations/: 01_init.sql
src/: calendar.rs  main.rs  routes.rs  schedule.rs
src/routes/: calendar.rs  events.rs  index.rs  mod.rs
