[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
axum = { version = "0.7.5", features = ["tracing", "macros", "http2"] }
maud = { version = "0.26.0", features = ["axum"] }
tokio = { version = "1.37.0", features = ["full"] }
chrono = "0.4.38"
sqlx = { version = "0.7.4", features = ["sqlite", "migrate", "macros", "runtime-tokio", "chrono"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_repr = "0.1.19"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

